force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/breadwinner_qbo__BW_QB_Metadata__c.object-meta.xml
<CustomObject>
    <label>QuickBooks Metadata</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>