force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Additional_Detail__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Additional_Detail__c</fullName>
    <label>Additional Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>