force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Classification__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Classification__c</fullName>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>