force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Description__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>