force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Due_Day_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Due_Day_of_the_Month__c</fullName>
    <label>Due (Day of the Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>