force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Due_In_Days__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Due_In_Days__c</fullName>
    <label>Due (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>