force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Fully_Qualified_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Fully_Qualified_Name_Full__c</fullName>
    <label>Fully Qualified Name (Full)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>