force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Last_Modified_in_QB_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Last_Modified_in_QB_Date__c</fullName>
    <label>Last Modified in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>