force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Metadata_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Metadata_Name_Full__c</fullName>
    <label>Metadata Name (Full)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>