force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/fields/breadwinner_qbo__Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>