force-app/main/default/objects/breadwinner_qbo__BW_QB_Metadata__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Type__c</columns>
    <columns>breadwinner_qbo__Metadata_Type__c</columns>
    <columns>breadwinner_qbo__Active__c</columns>
    <columns>breadwinner_qbo__Fully_Qualified_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>